# EmplyeeManagementSystem

./: CMakeCache.txt  CMakeLists.txt  DOC link  EMS_Final.c  EmployeeManagement.c  EmployeeManagementSystem  FunctionalRequirements.md  Makefile  README.md  SRS_Table.md  UseCaseDescription.md  attendance.c  attendance.h  attendance.txt  auth.c  auth.h  demo_login.md  employee.c  employee.h  employees.txt  ems  fileio.c  fileio.h  payroll.c  payroll.h  role.c  role.h  users.txt  utils.c  utils.h
documentation/: NonFunctionalRequirements.md  SRS_Documentation.md  SRS_Table.md
